Deploy preview for PR 50 🛫

--- a/pr-preview/pr-50/print.html
+++ b/pr-preview/pr-50/print.html
@@ -2447,14 +2447,18 @@ The <a href="https://www.communityofpractice.ca/background/what-is-a-community-o
 <div style="break-before: page; page-break-before: always;"></div><h1 id="17-april-2023"><a class="header" href="#17-april-2023">17 April 2023</a></h1>
 <p>This is our initial meeting.
 The goal is to welcome people to the community and outline how we envision running these Community of Practice meetings.</p>
+<h2 id="acknowledgement-of-country"><a class="header" href="#acknowledgement-of-country">Acknowledgement of Country</a></h2>
 <h2 id="introductions"><a class="header" href="#introductions">Introductions</a></h2>
-<p>Introduce each participant in turn.</p>
+<p>We may not have time for each participant to introduce themselves.</p>
 <h2 id="theme-reproducible-research"><a class="header" href="#theme-reproducible-research">Theme: Reproducible Research</a></h2>
 <p>Outline the theme and scope for this community.</p>
 <p>This is open to all researchers who share an interest in reproducible research and/or related topics and practices; <strong>no prior knowledge is required</strong>.</p>
 <p>Reproducible Research is a very broad topic.
 For example, consider these questions:</p>
 <ul>
+<li>
+<p>Can you reproduce your current results on a new computer?</p>
+</li>
 <li>
 <p>Can someone else reproduce your current results?</p>
 </li>
@@ -2471,6 +2475,15 @@ For example, consider these questions:</p>
 <p>Can you fix a mistake and update your own results from, say, 2 years ago?</p>
 </li>
 </ul>
+<div id="admonition-tip" class="admonition tip">
+<div class="admonition-title">
+<p>Tip</p>
+<p><a class="admonition-anchor-link" href="community/meetings/2023-04-17.html#admonition-tip"></a></p>
+</div>
+<div>
+<p>The biggest challenge can often be remembering <strong>what</strong> you did and <strong>how</strong> you did it.</p>
+</div>
+</div>
 <h2 id="describe-how-these-meetings-will-run"><a class="header" href="#describe-how-these-meetings-will-run">Describe how these meetings will run</a></h2>
 <ul>
 <li>
