Deploy preview for PR 50 🛫

--- a/pr-preview/pr-50/print.html
+++ b/pr-preview/pr-50/print.html
@@ -2453,8 +2453,7 @@ The goal is to welcome people to the community and outline how we envision runni
 <h2 id="theme-reproducible-research"><a class="header" href="#theme-reproducible-research">Theme: Reproducible Research</a></h2>
 <p>Outline the theme and scope for this community.</p>
 <p>This is open to all researchers who share an interest in reproducible research and/or related topics and practices; <strong>no prior knowledge is required</strong>.</p>
-<p>Reproducible Research is a very broad topic.
-For example, consider these questions:</p>
+<p>For example, consider these questions:</p>
 <ul>
 <li>
 <p>Can you reproduce your current results on a new computer?</p>
