Deploy preview for PR 50 🛫

--- a/pr-preview/pr-50/community/meetings/2023-04-17.html
+++ b/pr-preview/pr-50/community/meetings/2023-04-17.html
@@ -188,6 +188,7 @@ The goal is to welcome people to the community and outline how we envision runni
 </div>
 <div>
 <p>The biggest challenge can often be remembering <strong>what</strong> you did and <strong>how</strong> you did it.</p>
+<p>Making <strong>small changes</strong> to your practices can greatly improve reproducibilty!</p>
 </div>
 </div>
 <h2 id="describe-how-these-meetings-will-run"><a class="header" href="#describe-how-these-meetings-will-run">Describe how these meetings will run</a></h2>
