Deploy preview for PR 50 🛫

--- a/pr-preview/pr-50/community/meetings/2023-04-17.html
+++ b/pr-preview/pr-50/community/meetings/2023-04-17.html
@@ -259,13 +259,13 @@ A number of common themes emerged.</p>
 <p>A number of people mentioned now being sure how to get started, or starting with good intentions but ending up with a mess.</p>
 <ul>
 <li>
-<p>Dave: transitioning from principle to practice</p>
+<p>Dave: how can I transition from principle to practice?</p>
+</li>
+<li>
+<p>Ollie: similar to David, I often start well but end up with a mess.</p>
 </li>
 <li>
 <p>Ruarai: what other have found useful and applied in this space, what options are out there?</p>
-</li>
-<li>
-<p>Ollie: similar to David, start well but end up with a mess</p>
 </li>
 <li>
 <p>Michael: I'm a complete novice, git command lines are a foreign language to me!
