Deploy preview for PR 54 🛫

--- a/pr-preview/pr-54/print.html
+++ b/pr-preview/pr-54/print.html
@@ -2101,7 +2101,7 @@ This should be located on the right-hand side, above the list of files.</p>
 The code author will naturally feel that they own the code, and the reviewer needs to respect this.</p>
 </div>
 </div>
-<p>For further advice and suggestions on how to conduct peer code review, please see the <a href="collaborating/../resources.html#performing-peer-code-review">Performing peer code review</a> references.</p>
+<p>For further advice and suggestions on how to conduct peer code review, please see the <a href="collaborating/../resources.html#performing-peer-code-review">Performing peer code review</a> resources.</p>
 <div id="admonition-tip" class="admonition tip">
 <div class="admonition-title">
 <p>Tip</p>
