--- a/pr-preview/pr-54/collaborating/peer-code-review.html
+++ b/pr-preview/pr-54/collaborating/peer-code-review.html
@@ -163,7 +163,7 @@
 The code author will naturally feel that they own the code, and the reviewer needs to respect this.</p>
 </div>
 </div>
-<p>For further advice and suggestions on how to conduct peer code review, please see the <a href="../resources.html#performing-peer-code-review">Performing peer code review</a> references.</p>
+<p>For further advice and suggestions on how to conduct peer code review, please see the <a href="../resources.html#performing-peer-code-review">Performing peer code review</a> resources.</p>
 <div id="admonition-tip" class="admonition tip">
 <div class="admonition-title">
 <p>Tip</p>
