Deploy preview for PR 56 🛫

--- a/pr-preview/pr-56/print.html
+++ b/pr-preview/pr-56/print.html
@@ -191,7 +191,7 @@ There are <strong>many reasons!</strong></p>
 <div>
 <p>A piece of code is often useful beyond a single project or study.</p>
 <p>By applying the above skills in your research, you will be able to easily reproduce past results, extend your code to address new questions and problems, and allow others to build on your code in their own research.</p>
-<p>The benefits of good comptuational practices can pay off long after the project is finished.</p>
+<p>The benefits of good computational practices can pay off long after the project is finished.</p>
 </div>
 </div>
 <h2 id="structure"><a class="header" href="#structure">Structure</a></h2>
