Deploy preview for PR 59 🛫

--- a/pr-preview/pr-59/project-structure/index.html
+++ b/pr-preview/pr-59/project-structure/index.html
@@ -152,8 +152,7 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="project-structure"><a class="header" href="#project-structure">Project structure</a></h1>
-<p>How we choose to structure a project can affect how readily someone else — or even yourself, after a period of absence — can understand, use, and extend the work.
-A good project structure can serve as a table of contents and help the reader to navigate.</p>
+<p>How we choose to structure a project can affect how readily someone else — or even yourself, after a period of absence — can understand, use, and extend the work.</p>
 <div id="admonition-question" class="admonition question">
 <div class="admonition-title">
 <p>Question</p>
@@ -161,6 +160,15 @@ A good project structure can serve as a table of contents and help the reader to
 </div>
 <div>
 <p>Have you ever looked at your old code and wondered how it worked or how to make it run?</p>
+</div>
+</div>
+<div id="admonition-tip" class="admonition tip">
+<div class="admonition-title">
+<p>Tip</p>
+<p><a class="admonition-anchor-link" href="#admonition-tip"></a></p>
+</div>
+<div>
+<p>A good project structure can serve as a table of contents and help the reader to navigate.</p>
 </div>
 </div>
 <p>In an earlier section we provided some guidelines for <a href="../using-git/how-to-structure-a-repository.html">how to structure a repository</a>.
