Deploy preview for PR 59 🛫

--- a/pr-preview/pr-59/print.html
+++ b/pr-preview/pr-59/print.html
@@ -2575,6 +2575,15 @@ We recommend using a language-specific automation tool where possible, and only 
 </li>
 </ul>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="exercise-a-good-readme"><a class="header" href="#exercise-a-good-readme">Exercise: a good README</a></h1>
+<p>Remember that the README file (usually one of <code>README.md</code>, <code>README.rst</code>, or <code>README.txt</code>) is often <strong>the very first thing</strong> that a user will see when looking at your project.</p>
+<ul>
+<li>
+<p>Have you seen any README files that were particularly helpful, or were not very helpful?</p>
+</li>
+<li>
+<p>What information do you find helpful in a README file?</p>
+</li>
+</ul>
 <p>Consider the <code>README.md</code> file in the <a href="https://gitlab.unimelb.edu.au/rgmoss/aus-2020-covid-forecasts">Australian 2020 COVID-19 forecasts repository</a>.</p>
 <ul>
 <li>
