Deploy preview for PR 60 🛫

--- a/pr-preview/pr-60/community/meetings/2023-10-18.html
+++ b/pr-preview/pr-60/community/meetings/2023-10-18.html
@@ -266,6 +266,16 @@ They may view the work from a fresh perspective, and be able to identify aspects
 <li>Should this code be divided into smaller functions?</li>
 <li>Should this code be divided into multiple files?</li>
 </ul>
+<div id="admonition-info-1" class="admonition info">
+<div class="admonition-title">
+<p>Info</p>
+<p><a class="admonition-anchor-link" href="#admonition-info-1"></a></p>
+</div>
+<div>
+<p>For further ideas about useful peer review activities, and how to incorporate them into your workflow, see the following paper:</p>
+<p><a href="https://doi.org/10.1111/jeb.14230">Implementing code review in the scientific workflow: Insights from ecology and evolutionary biology</a>, Ivimey-Cook et al., <em>Journal of Evolutionary Biology</em> 36(10):1347–1356, 2023.</p>
+</div>
+</div>
 <h2 id="styling-and-formatting"><a class="header" href="#styling-and-formatting">Styling and formatting</a></h2>
 <p>We also discussed opinions about how to name functions, variables, files, etc.</p>
 <p>For example, R allows you to use periods (<code>.</code>) in function and variable names, but the tidyverse style guide <a href="https://style.tidyverse.org/syntax.html">recommends</a> only using lowercase letters, numbers, and underscores (<code>_</code>).</p>
