--- a/pr-preview/pr-54/collaborating/peer-code-review/index.html
+++ b/pr-preview/pr-54/collaborating/peer-code-review/index.html
@@ -2065,7 +2065,7 @@
 <p>Remember that code review is a <strong>discussion and critique</strong> of a person's work.
 The code author will naturally feel that they own the code, and the reviewer needs to respect this.</p>
 </div>
-<p>For further advice and suggestions on how to conduct peer code review, please see the <a href="../../resources/#performing-peer-code-review">Performing peer code review</a> references.</p>
+<p>For further advice and suggestions on how to conduct peer code review, please see the <a href="../../resources/#performing-peer-code-review">Performing peer code review</a> resources.</p>
 <div class="admonition tip">
 <p class="admonition-title">Tip</p>
 <p>Mention people who have reviewed your code in the acknowledgements section of the paper.</p>
