Deploy preview for PR 67 🛫

--- a/pr-preview/pr-67/community/index.html
+++ b/pr-preview/pr-67/community/index.html
@@ -2309,7 +2309,7 @@ The <a href="https://www.communityofpractice.ca/background/what-is-a-community-o
 <p>Domain: A shared interest, problem, or concern.</p>
 </li>
 </ol>
-<p>We regularly meet as a community, report <a href="meetings/">meeting summaries</a>, and collect <a href="case-studies/">case studies</a> that showcase examples and best practices.</p>
+<p>We regularly meet as a community, report <a href="meetings/">meeting summaries</a>, and collect <a href="case-studies/">case studies</a> that showcase examples of good practices.</p>
 
 
 
