Deploy preview for PR 67 🛫

--- a/pr-preview/pr-67/orientation/index.html
+++ b/pr-preview/pr-67/orientation/index.html
@@ -2297,7 +2297,7 @@ There was broad interest in having a checklist, and example workflows for people
 <ul>
 <li>How to set up common tools on your laptop (e.g., Python and R);</li>
 <li>How to <a href="../guides/using-git/how-to-structure-a-repository/">organise your files</a>;</li>
-<li>How to write Markdown documents;</li>
+<li>How to write Markdown documents (see Nick Tierney's book <a href="https://rmd4sci.njtierney.com/">RMarkdown for Scientists</a>);</li>
 <li>How to format and lint your code;</li>
 <li>How to set up git <a href="../guides/using-git/">on your own device</a> and <a href="../guides/collaborating/">using platforms such as GitHub</a>;</li>
 <li>How to recover <a href="../guides/using-git/inspecting-your-history/">old versions of files</a>;</li>
