--- a/pr-preview/pr-68/orientation/index.html
+++ b/pr-preview/pr-68/orientation/index.html
@@ -2327,7 +2327,7 @@ There was broad interest in having a checklist, and example workflows for people
 <p class="admonition-title">How to contribute</p>
 <p>If you want to suggest a topic, or provide feedback about existing content, please <a href="https://github.com/robmoss/git-is-my-lab-book/issues/new?labels=orientation&amp;title=&amp;body=Please enter a short, descriptive title (above) and explain your idea here">submit an issue</a>.</p>
 <p>If you to contribute content, please fork <a href="https://github.com/robmoss/git-is-my-lab-book">the repository</a>, add your contributions, and create a <a href="https://docs.github.com/en/pull-requests/collaborating-with-pull-requests/proposing-changes-to-your-work-with-pull-requests/about-pull-requests">pull request</a>.</p>
-<p>See our <a href="../how-to-contribute/">How to contribute</a> page for more details.</p>
+<p>See our <a href="../how-to-contribute/">How to contribute</a> page for more details, and <a href="https://github.com/robmoss/git-is-my-lab-book/issues?q=is%3Aissue+is%3Aopen+label%3Aorientation">current orientation guide issues</a>.</p>
 </div>
 <p>Suggested topics included:</p>
 <ul>
