--- a/pr-preview/pr-68/orientation/index.html
+++ b/pr-preview/pr-68/orientation/index.html
@@ -2325,9 +2325,32 @@
 There was broad interest in having a checklist, and example workflows for people to follow — particularly for projects that involve some form of code "hand over", to ensure that the recipients experience few problems in running the code themselves.</p>
 <div class="admonition info">
 <p class="admonition-title">How to contribute</p>
-<p>If you want to suggest a topic, or provide feedback about existing content, please <a href="https://github.com/robmoss/git-is-my-lab-book/issues/new?labels=orientation&amp;title=&amp;body=Please enter a short, descriptive title (above) and explain your idea here">submit an issue</a>.</p>
-<p>If you to contribute content, please fork <a href="https://github.com/robmoss/git-is-my-lab-book">the repository</a>, add your contributions, and create a <a href="https://docs.github.com/en/pull-requests/collaborating-with-pull-requests/proposing-changes-to-your-work-with-pull-requests/about-pull-requests">pull request</a>.</p>
-<p>See our <a href="../how-to-contribute/">How to contribute</a> page for more details, and <a href="https://github.com/robmoss/git-is-my-lab-book/issues?q=is%3Aissue+is%3Aopen+label%3Aorientation">current orientation guide issues</a>.</p>
+<p>To <strong>suggest a new topic</strong>:</p>
+<ul>
+<li>
+<p>Use the search box (top of the page) and check if the topic already exists;</p>
+</li>
+<li>
+<p>If the topic does not exist, <a href="https://github.com/robmoss/git-is-my-lab-book/issues/new?labels=orientation&amp;title=New Topic:&amp;body=Please enter a short, descriptive title (above) and explain your idea here">submit an issue</a>.</p>
+</li>
+</ul>
+<p>To <strong>provide feedback about existing content</strong>:</p>
+<ul>
+<li>If the topic does not exist, <a href="https://github.com/robmoss/git-is-my-lab-book/issues/new?labels=orientation&amp;title=Feedback:&amp;body=Please enter a short, descriptive title (above) and provide your feedback here">submit an issue</a>.</li>
+</ul>
+<p>To <strong>contribute new content</strong>:</p>
+<ul>
+<li>
+<p>Use the search box (top of the page) and check if similar content already exists;</p>
+</li>
+<li>
+<p>If there is no similar content, please fork <a href="https://github.com/robmoss/git-is-my-lab-book">the repository</a>, add your contributions, and create a <a href="https://docs.github.com/en/pull-requests/collaborating-with-pull-requests/proposing-changes-to-your-work-with-pull-requests/about-pull-requests">pull request</a>.</p>
+</li>
+<li>
+<p>See our <a href="../how-to-contribute/">How to contribute</a> page for more details, such as formatting guidelines.</p>
+</li>
+</ul>
+<p>Current issues for the orientation guide are <a href="https://github.com/robmoss/git-is-my-lab-book/issues?q=is%3Aissue+is%3Aopen+label%3Aorientation">listed here</a>.</p>
 </div>
 <p>Suggested topics included:</p>
 <ul>
