--- a/pr-preview/pr-68/orientation/index.html
+++ b/pr-preview/pr-68/orientation/index.html
@@ -2334,10 +2334,8 @@ There was broad interest in having a checklist, and example workflows for people
 <p>If the topic does not exist, <a href="https://github.com/robmoss/git-is-my-lab-book/issues/new?labels=orientation&amp;title=New Topic:&amp;body=Please enter a short, descriptive title (above) and explain your idea here">submit an issue</a>.</p>
 </li>
 </ul>
-<p>To <strong>provide feedback about existing content</strong>:</p>
-<ul>
-<li>If the topic does not exist, <a href="https://github.com/robmoss/git-is-my-lab-book/issues/new?labels=orientation&amp;title=Feedback:&amp;body=Please enter a short, descriptive title (above) and provide your feedback here">submit an issue</a>.</li>
-</ul>
+<p>To <strong>suggest a useful resource</strong>: <a href="https://github.com/robmoss/git-is-my-lab-book/issues/new?labels=orientation&amp;title=Useful Resource:&amp;body=Please enter a short, descriptive title (above) and include a link to the resource here">submit an issue</a>.</p>
+<p>To <strong>provide feedback about existing content</strong>: <a href="https://github.com/robmoss/git-is-my-lab-book/issues/new?labels=orientation&amp;title=Feedback:&amp;body=Please enter a short, descriptive title (above) and provide your feedback here">submit an issue</a>.</p>
 <p>To <strong>contribute new content</strong>:</p>
 <ul>
 <li>
