Deploy preview for PR 68 🛫

--- a/pr-preview/pr-68/orientation/index.html
+++ b/pr-preview/pr-68/orientation/index.html
@@ -2331,11 +2331,11 @@ There was broad interest in having a checklist, and example workflows for people
 <p>Use the search box (top of the page) and check if the topic already exists;</p>
 </li>
 <li>
-<p>If the topic does not exist, <a href="https://github.com/robmoss/git-is-my-lab-book/issues/new?labels=orientation&amp;title=New Topic:&amp;body=Please enter a short, descriptive title (above) and explain your idea here">submit an issue</a>.</p>
+<p>If the topic does not exist, submit a <a href="https://github.com/robmoss/git-is-my-lab-book/issues/new?labels=orientation&amp;title=New Topic:&amp;body=Please enter a short, descriptive title (above) and explain your idea here">"New Topic" issue</a>.</p>
 </li>
 </ul>
-<p>To <strong>suggest a useful resource</strong>: <a href="https://github.com/robmoss/git-is-my-lab-book/issues/new?labels=orientation&amp;title=Useful Resource:&amp;body=Please enter a short, descriptive title (above) and include a link to the resource here">submit an issue</a>.</p>
-<p>To <strong>provide feedback about existing content</strong>: <a href="https://github.com/robmoss/git-is-my-lab-book/issues/new?labels=orientation&amp;title=Feedback:&amp;body=Please enter a short, descriptive title (above) and provide your feedback here">submit an issue</a>.</p>
+<p>To <strong>suggest a useful resource</strong>: submit a <a href="https://github.com/robmoss/git-is-my-lab-book/issues/new?labels=orientation&amp;title=Useful Resource:&amp;body=Please enter a short, descriptive title (above) and include a link to the resource here">"Useful Resource" issue</a>.</p>
+<p>To <strong>provide feedback about existing content</strong>: submit a <a href="https://github.com/robmoss/git-is-my-lab-book/issues/new?labels=orientation&amp;title=Feedback:&amp;body=Please enter a short, descriptive title (above) and provide your feedback here">"Feedback" issue</a>.</p>
 <p>To <strong>contribute new content</strong>:</p>
 <ul>
 <li>
