Deploy preview for PR 68 🛫

--- a/pr-preview/pr-68/orientation/index.html
+++ b/pr-preview/pr-68/orientation/index.html
@@ -2342,7 +2342,7 @@ There was broad interest in having a checklist, and example workflows for people
 <p>Use the search box (top of the page) and check if similar content already exists;</p>
 </li>
 <li>
-<p>If there is no similar content, please fork <a href="https://github.com/robmoss/git-is-my-lab-book">the repository</a>, add your contributions, and create a <a href="https://docs.github.com/en/pull-requests/collaborating-with-pull-requests/proposing-changes-to-your-work-with-pull-requests/about-pull-requests">pull request</a>.</p>
+<p>If there is no similar content, please <a href="https://docs.github.com/en/pull-requests/collaborating-with-pull-requests/working-with-forks/about-forks">create a fork</a> of <a href="https://github.com/robmoss/git-is-my-lab-book">this repository</a>, add your contributions, and create a <a href="https://docs.github.com/en/pull-requests/collaborating-with-pull-requests/proposing-changes-to-your-work-with-pull-requests/about-pull-requests">pull request</a>.</p>
 </li>
 <li>
 <p>See our <a href="../how-to-contribute/">How to contribute</a> page for more details, such as formatting guidelines.</p>
