Deploy preview for PR 75 🛫

--- a/pr-preview/pr-75/community/training/debugging/manifesto/index.html
+++ b/pr-preview/pr-75/community/training/debugging/manifesto/index.html
@@ -3243,7 +3243,7 @@
 </figure>
 <div class="admonition info">
 <p class="admonition-title">Info</p>
-<p>See the <a href="resourced.md">Resources</a> page for links to more of Julia Evans' articles, stories, and zines about debugging.</p>
+<p>See the <a href="../resources/">Resources</a> page for links to more of Julia Evans' articles, stories, and zines about debugging.</p>
 </div>
 
 
