Deploy preview for PR 75 🛫

--- a/pr-preview/pr-75/how-to-contribute/index.html
+++ b/pr-preview/pr-75/how-to-contribute/index.html
@@ -3445,6 +3445,7 @@ Each link must have:</p>
 <span class="w">    </span><span class="k">2.</span> &lt;a data-video=&quot;demo&quot; data-seek-to=&quot;17&quot; href=&quot;javascript:;&quot;&gt;Show how to use nano&lt;/a&gt;
 <span class="w">    </span><span class="k">3.</span> &lt;a data-video=&quot;demo&quot; data-seek-to=&quot;71&quot; href=&quot;javascript:;&quot;&gt;Show how to use vim&lt;/a&gt;
 </code></pre></div>
+<p>You can use the <a href="https://github.com/robmoss/asciinema-scripted">asciinema-scripted</a> tool to generate scripted recordings.</p>
 
 
 
