Deploy preview for PR 75 🛫

--- a/pr-preview/pr-75/community/training/debugging/using-a-debugger/index.html
+++ b/pr-preview/pr-75/community/training/debugging/using-a-debugger/index.html
@@ -3491,7 +3491,7 @@ They cover:</p>
 <div class="admonition tip">
 <p class="admonition-title">Interactive debugger sessions</p>
 <p>If your editor supports running a debugger, <strong>use this feature!</strong>
-See these examples for <a href="https://support.posit.co/hc/en-us/articles/205612627-Debugging-with-the-RStudio-IDE">RStudio</a>, <a href="https://www.jetbrains.com/pycharm/features/debugger.html">PyCharm</a>, and <a href="https://docs.spyder-ide.org/current/panes/debugging.html">Spyder</a>.</p>
+See these examples for <a href="https://support.posit.co/hc/en-us/articles/205612627-Debugging-with-the-RStudio-IDE">RStudio</a>, <a href="https://www.jetbrains.com/pycharm/features/debugger.html">PyCharm</a>, <a href="https://docs.spyder-ide.org/current/panes/debugging.html">Spyder</a>, and <a href="https://code.visualstudio.com/docs/editor/debugging">VS Code</a>.</p>
 </div>
 <div class="tabbed-set tabbed-alternate" data-tabs="2:2"><input checked="checked" id="__tabbed_2_1" name="__tabbed_2" type="radio" /><input id="__tabbed_2_2" name="__tabbed_2" type="radio" /><div class="tabbed-labels"><label for="__tabbed_2_1">Python debugger</label><label for="__tabbed_2_2">R debugger</label></div>
 <div class="tabbed-content">
