Deploy preview for PR 75 🛫

--- a/pr-preview/pr-75/community/training/debugging/example-square-numbers/index.html
+++ b/pr-preview/pr-75/community/training/debugging/example-square-numbers/index.html
@@ -3530,6 +3530,10 @@ They cover:</p>
 <li>How to inspect the current values of variables; and</li>
 <li>How to step through, and over, lines of code.</li>
 </ul>
+<div class="admonition info">
+<p class="admonition-title">Manual breakpoints</p>
+<p>You can also create breakpoints in your code by calling <a href="https://docs.python.org/3/library/pdb.html"><code>breakpoint()</code></a> for Python, and <a href="https://adv-r.hadley.nz/debugging.html#browser"><code>browser()</code></a> for R.</p>
+</div>
 <div class="admonition tip">
 <p class="admonition-title">Interactive debugger sessions</p>
 <p>If your editor supports running a debugger, <strong>use this feature!</strong>
