--- a/pr-preview/pr-75/community/training/debugging/resources/index.html
+++ b/pr-preview/pr-75/community/training/debugging/resources/index.html
@@ -3314,6 +3314,7 @@
 </li>
 <li><a href="https://hamatti.org/posts/debug-with-pdb-and-breakpoint/">Debug with pdb and breakpoint</a></li>
 <li><a href="https://adv-r.hadley.nz/debugging.html">Advanced R: Debugging</a></li>
+<li><a href="https://rstudio.github.io/cheatsheets/html/rstudio-ide.html#debug-mode">RStudio Cheatsheet: Debugging</a></li>
 </ul>
 
 
