Deploy preview for PR 75 🛫

--- a/pr-preview/pr-75/community/training/debugging/understanding-error-messages/index.html
+++ b/pr-preview/pr-75/community/training/debugging/understanding-error-messages/index.html
@@ -3667,8 +3667,8 @@ This means that the <strong>cause</strong> of the error, and location where the 
 <span class="normal">23</span>
 <span class="normal">24</span></pre></div></td><td class="code"><div><pre><span></span><code>Traceback (most recent call last):
   File &quot;long_stacktrace.py&quot;, line 7, in &lt;module&gt;
-    plt.plot(example_counts, cbap=cm.Blues)
-  File &quot;venv/lib/python3.10/site-packages/matplotlib/pyplot.py&quot;, line 3794, in plot
+<span class="hll">    plt.plot(example_counts, cbap=cm.Blues)
+</span>  File &quot;venv/lib/python3.10/site-packages/matplotlib/pyplot.py&quot;, line 3794, in plot
     return gca().plot(
   File &quot;venv/lib/python3.10/site-packages/matplotlib/axes/_axes.py&quot;, line 1779, in plot
     lines = [*self._get_lines(self, *args, data=data, **kwargs)]
